// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceList should render add service modal after click 1`] = `
.emotion-0 {
  margin: 20px;
}

.emotion-2 {
  padding-bottom: 20px;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  float: right;
}

.emotion-4 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px #3697f2 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  color: #3697f2;
}

.emotion-4:first-of-type {
  margin-left: 0;
}

.emotion-4:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-4:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-4:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-5 {
  width: 100%;
  border-spacing: 0;
  display: table;
  border-collapse: separate;
  border-color: #9a9a9a;
}

.emotion-7 {
  text-align: left;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-11 {
  text-align: center;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-19 {
  background-color: #3570f40D;
  text-align: left;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-23 {
  background-color: #3570f40D;
  text-align: center;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-25 {
  fill: #188fff;
  cursor: pointer;
  vertical-align: text-bottom;
}

<div
  class="emotion-0 emotion-1"
  data-testid="service-list"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div>
      <button
        class="emotion-4 denali-button"
      >
        Add Service
      </button>
    </div>
  </div>
  <table
    class="emotion-5 emotion-6"
    id="services-table"
  >
    <thead>
      <tr>
        <th
          class="emotion-7 emotion-8"
        >
          Service
        </th>
        <th
          class="emotion-7 emotion-8"
        >
          Modified Date
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Public Keys
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Tags
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="emotion-17 emotion-18"
        data-testid="service-row"
      >
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          openhouse
        </td>
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          2020-02-08 00:02 UTC
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              key
            </title>
            <path
              d="M861.867 738.133l-283.733-285.867c25.375-36.49 40.54-81.738 40.54-130.527 0-0.612-0.002-1.223-0.007-1.833l0.001 0.094c0-129.603-105.064-234.667-234.667-234.667s-234.667 105.064-234.667 234.667c0 129.603 105.064 234.667 234.667 234.667v0c0.517 0.004 1.128 0.007 1.74 0.007 48.789 0 94.037-15.165 131.286-41.039l-0.759 0.499 128 125.867-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 98.133-98.133 68.267 68.267-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 128-128c8.083-7.434 13.13-18.061 13.13-29.867s-5.047-22.432-13.101-29.84l-0.029-0.026zM234.667 320c0-82.475 66.859-149.333 149.333-149.333s149.333 66.859 149.333 149.333c0 82.475-66.859 149.333-149.333 149.333v0c-82.475 0-149.333-66.859-149.333-149.333v0z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              tag
            </title>
            <path
              d="M492.8 145.067l360.533 360.533v347.733h-347.733l-360.533-360.533 347.733-347.733zM492.8 42.667c-11.712 0.172-22.255 5.037-29.86 12.793l-0.007 0.007-407.467 407.467c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026 416 416h424.533c23.564 0 42.667-19.103 42.667-42.667v0-424.533l-416-416c-7.612-7.763-18.155-12.628-29.835-12.8l-0.032-0z"
            />
            <path
              d="M746.667 661.333c0 47.128-38.205 85.333-85.333 85.333s-85.333-38.205-85.333-85.333c0-47.128 38.205-85.333 85.333-85.333s85.333 38.205 85.333 85.333z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id="delete-service-openhouse"
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              trash
            </title>
            <path
              d="M917.333 187.733c0.007 0.319 0.012 0.694 0.012 1.071 0 12.755-4.867 24.374-12.846 33.1l0.034-0.038c-6.696 7.89-16.62 12.864-27.706 12.864-0.76 0-1.515-0.023-2.264-0.069l0.103 0.005h-256c-23.564 0-42.667-19.103-42.667-42.667v0-42.667h-128v42.667c0 23.564-19.103 42.667-42.667 42.667v0h-253.867c-0.136 0.001-0.298 0.002-0.459 0.002-22.485 0-41.102-16.565-44.311-38.157l-0.030-0.245c-0.007-0.319-0.012-0.694-0.012-1.071 0-12.755 4.867-24.374 12.846-33.1l-0.034 0.038c6.696-7.89 16.62-12.864 27.706-12.864 0.76 0 1.515 0.023 2.264 0.069l-0.103-0.005h213.333v-42.667c0-23.564 19.103-42.667 42.667-42.667v0h213.333c23.564 0 42.667 19.103 42.667 42.667v0 42.667h211.2c0.136-0.001 0.298-0.002 0.459-0.002 22.485 0 41.102 16.565 44.311 38.157l0.030 0.245z"
            />
            <path
              d="M742.4 358.4l-51.2 516.267h-358.4l-51.2-516.267c-2.24-21.656-20.391-38.401-42.453-38.401-0.075 0-0.15 0-0.225 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-23.564 0-42.667 19.103-42.667 42.667 0 1.503 0.078 2.988 0.229 4.45l-0.015-0.183 55.467 554.667c2.24 21.656 20.391 38.401 42.453 38.401 0.075 0 0.15-0 0.225-0.001l-0.012 0h435.2c0.064 0 0.139 0.001 0.214 0.001 22.062 0 40.213-16.744 42.437-38.218l0.015-0.183 55.467-554.667c0.136-1.28 0.214-2.764 0.214-4.267 0-23.564-19.103-42.667-42.667-42.667-0.075 0-0.15 0-0.226 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-22.062 0-40.213 16.744-42.437 38.218l-0.015 0.183z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ServiceList should render delete service modal error(other) after click 1`] = `
<div
  data-testid="error-message"
  name="red600"
  style="color: rgb(208, 17, 17); display: inline-block;"
>
  Status: 1. Message: test-error
</div>
`;

exports[`ServiceList should render delete service modal error(other) after click 2`] = `
.emotion-0 {
  margin: 20px;
}

.emotion-2 {
  padding-bottom: 20px;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  float: right;
}

.emotion-4 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px #3697f2 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  color: #3697f2;
}

.emotion-4:first-of-type {
  margin-left: 0;
}

.emotion-4:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-4:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-4:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-5 {
  width: 100%;
  border-spacing: 0;
  display: table;
  border-collapse: separate;
  border-color: #9a9a9a;
}

.emotion-7 {
  text-align: left;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-11 {
  text-align: center;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-19 {
  background-color: #3570f40D;
  text-align: left;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-23 {
  background-color: #3570f40D;
  text-align: center;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-25 {
  fill: #188fff;
  cursor: pointer;
  vertical-align: text-bottom;
}

<div
  class="emotion-0 emotion-1"
  data-testid="service-list"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div>
      <button
        class="emotion-4 denali-button"
      >
        Add Service
      </button>
    </div>
  </div>
  <table
    class="emotion-5 emotion-6"
    id="services-table"
  >
    <thead>
      <tr>
        <th
          class="emotion-7 emotion-8"
        >
          Service
        </th>
        <th
          class="emotion-7 emotion-8"
        >
          Modified Date
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Public Keys
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Tags
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="emotion-17 emotion-18"
        data-testid="service-row"
      >
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          openhouse
        </td>
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          2020-02-08 00:02 UTC
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              key
            </title>
            <path
              d="M861.867 738.133l-283.733-285.867c25.375-36.49 40.54-81.738 40.54-130.527 0-0.612-0.002-1.223-0.007-1.833l0.001 0.094c0-129.603-105.064-234.667-234.667-234.667s-234.667 105.064-234.667 234.667c0 129.603 105.064 234.667 234.667 234.667v0c0.517 0.004 1.128 0.007 1.74 0.007 48.789 0 94.037-15.165 131.286-41.039l-0.759 0.499 128 125.867-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 98.133-98.133 68.267 68.267-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 128-128c8.083-7.434 13.13-18.061 13.13-29.867s-5.047-22.432-13.101-29.84l-0.029-0.026zM234.667 320c0-82.475 66.859-149.333 149.333-149.333s149.333 66.859 149.333 149.333c0 82.475-66.859 149.333-149.333 149.333v0c-82.475 0-149.333-66.859-149.333-149.333v0z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              tag
            </title>
            <path
              d="M492.8 145.067l360.533 360.533v347.733h-347.733l-360.533-360.533 347.733-347.733zM492.8 42.667c-11.712 0.172-22.255 5.037-29.86 12.793l-0.007 0.007-407.467 407.467c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026 416 416h424.533c23.564 0 42.667-19.103 42.667-42.667v0-424.533l-416-416c-7.612-7.763-18.155-12.628-29.835-12.8l-0.032-0z"
            />
            <path
              d="M746.667 661.333c0 47.128-38.205 85.333-85.333 85.333s-85.333-38.205-85.333-85.333c0-47.128 38.205-85.333 85.333-85.333s85.333 38.205 85.333 85.333z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id="delete-service-openhouse"
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              trash
            </title>
            <path
              d="M917.333 187.733c0.007 0.319 0.012 0.694 0.012 1.071 0 12.755-4.867 24.374-12.846 33.1l0.034-0.038c-6.696 7.89-16.62 12.864-27.706 12.864-0.76 0-1.515-0.023-2.264-0.069l0.103 0.005h-256c-23.564 0-42.667-19.103-42.667-42.667v0-42.667h-128v42.667c0 23.564-19.103 42.667-42.667 42.667v0h-253.867c-0.136 0.001-0.298 0.002-0.459 0.002-22.485 0-41.102-16.565-44.311-38.157l-0.030-0.245c-0.007-0.319-0.012-0.694-0.012-1.071 0-12.755 4.867-24.374 12.846-33.1l-0.034 0.038c6.696-7.89 16.62-12.864 27.706-12.864 0.76 0 1.515 0.023 2.264 0.069l-0.103-0.005h213.333v-42.667c0-23.564 19.103-42.667 42.667-42.667v0h213.333c23.564 0 42.667 19.103 42.667 42.667v0 42.667h211.2c0.136-0.001 0.298-0.002 0.459-0.002 22.485 0 41.102 16.565 44.311 38.157l0.030 0.245z"
            />
            <path
              d="M742.4 358.4l-51.2 516.267h-358.4l-51.2-516.267c-2.24-21.656-20.391-38.401-42.453-38.401-0.075 0-0.15 0-0.225 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-23.564 0-42.667 19.103-42.667 42.667 0 1.503 0.078 2.988 0.229 4.45l-0.015-0.183 55.467 554.667c2.24 21.656 20.391 38.401 42.453 38.401 0.075 0 0.15-0 0.225-0.001l-0.012 0h435.2c0.064 0 0.139 0.001 0.214 0.001 22.062 0 40.213-16.744 42.437-38.218l0.015-0.183 55.467-554.667c0.136-1.28 0.214-2.764 0.214-4.267 0-23.564-19.103-42.667-42.667-42.667-0.075 0-0.15 0-0.226 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-22.062 0-40.213 16.744-42.437 38.218l-0.015 0.183z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ServiceList should render delete service modal error(refresh) after click 1`] = `
.emotion-0 {
  margin: 20px;
}

.emotion-2 {
  padding-bottom: 20px;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  float: right;
}

.emotion-4 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px #3697f2 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  color: #3697f2;
}

.emotion-4:first-of-type {
  margin-left: 0;
}

.emotion-4:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-4:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-4:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-5 {
  width: 100%;
  border-spacing: 0;
  display: table;
  border-collapse: separate;
  border-color: #9a9a9a;
}

.emotion-7 {
  text-align: left;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-11 {
  text-align: center;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-19 {
  background-color: #3570f40D;
  text-align: left;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-23 {
  background-color: #3570f40D;
  text-align: center;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-25 {
  fill: #188fff;
  cursor: pointer;
  vertical-align: text-bottom;
}

<div
  class="emotion-0 emotion-1"
  data-testid="service-list"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div>
      <button
        class="emotion-4 denali-button"
      >
        Add Service
      </button>
    </div>
  </div>
  <table
    class="emotion-5 emotion-6"
    id="services-table"
  >
    <thead>
      <tr>
        <th
          class="emotion-7 emotion-8"
        >
          Service
        </th>
        <th
          class="emotion-7 emotion-8"
        >
          Modified Date
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Public Keys
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Tags
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="emotion-17 emotion-18"
        data-testid="service-row"
      >
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          openhouse
        </td>
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          2020-02-08 00:02 UTC
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              key
            </title>
            <path
              d="M861.867 738.133l-283.733-285.867c25.375-36.49 40.54-81.738 40.54-130.527 0-0.612-0.002-1.223-0.007-1.833l0.001 0.094c0-129.603-105.064-234.667-234.667-234.667s-234.667 105.064-234.667 234.667c0 129.603 105.064 234.667 234.667 234.667v0c0.517 0.004 1.128 0.007 1.74 0.007 48.789 0 94.037-15.165 131.286-41.039l-0.759 0.499 128 125.867-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 98.133-98.133 68.267 68.267-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 128-128c8.083-7.434 13.13-18.061 13.13-29.867s-5.047-22.432-13.101-29.84l-0.029-0.026zM234.667 320c0-82.475 66.859-149.333 149.333-149.333s149.333 66.859 149.333 149.333c0 82.475-66.859 149.333-149.333 149.333v0c-82.475 0-149.333-66.859-149.333-149.333v0z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              tag
            </title>
            <path
              d="M492.8 145.067l360.533 360.533v347.733h-347.733l-360.533-360.533 347.733-347.733zM492.8 42.667c-11.712 0.172-22.255 5.037-29.86 12.793l-0.007 0.007-407.467 407.467c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026 416 416h424.533c23.564 0 42.667-19.103 42.667-42.667v0-424.533l-416-416c-7.612-7.763-18.155-12.628-29.835-12.8l-0.032-0z"
            />
            <path
              d="M746.667 661.333c0 47.128-38.205 85.333-85.333 85.333s-85.333-38.205-85.333-85.333c0-47.128 38.205-85.333 85.333-85.333s85.333 38.205 85.333 85.333z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id="delete-service-openhouse"
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              trash
            </title>
            <path
              d="M917.333 187.733c0.007 0.319 0.012 0.694 0.012 1.071 0 12.755-4.867 24.374-12.846 33.1l0.034-0.038c-6.696 7.89-16.62 12.864-27.706 12.864-0.76 0-1.515-0.023-2.264-0.069l0.103 0.005h-256c-23.564 0-42.667-19.103-42.667-42.667v0-42.667h-128v42.667c0 23.564-19.103 42.667-42.667 42.667v0h-253.867c-0.136 0.001-0.298 0.002-0.459 0.002-22.485 0-41.102-16.565-44.311-38.157l-0.030-0.245c-0.007-0.319-0.012-0.694-0.012-1.071 0-12.755 4.867-24.374 12.846-33.1l-0.034 0.038c6.696-7.89 16.62-12.864 27.706-12.864 0.76 0 1.515 0.023 2.264 0.069l-0.103-0.005h213.333v-42.667c0-23.564 19.103-42.667 42.667-42.667v0h213.333c23.564 0 42.667 19.103 42.667 42.667v0 42.667h211.2c0.136-0.001 0.298-0.002 0.459-0.002 22.485 0 41.102 16.565 44.311 38.157l0.030 0.245z"
            />
            <path
              d="M742.4 358.4l-51.2 516.267h-358.4l-51.2-516.267c-2.24-21.656-20.391-38.401-42.453-38.401-0.075 0-0.15 0-0.225 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-23.564 0-42.667 19.103-42.667 42.667 0 1.503 0.078 2.988 0.229 4.45l-0.015-0.183 55.467 554.667c2.24 21.656 20.391 38.401 42.453 38.401 0.075 0 0.15-0 0.225-0.001l-0.012 0h435.2c0.064 0 0.139 0.001 0.214 0.001 22.062 0 40.213-16.744 42.437-38.218l0.015-0.183 55.467-554.667c0.136-1.28 0.214-2.764 0.214-4.267 0-23.564-19.103-42.667-42.667-42.667-0.075 0-0.15 0-0.226 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-22.062 0-40.213 16.744-42.437 38.218l-0.015 0.183z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ServiceList should render serviceList again after cancel delete 1`] = `
.emotion-0 {
  margin: 20px;
}

.emotion-2 {
  padding-bottom: 20px;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  float: right;
}

.emotion-4 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px #3697f2 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  color: #3697f2;
}

.emotion-4:first-of-type {
  margin-left: 0;
}

.emotion-4:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-4:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-4:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-5 {
  width: 100%;
  border-spacing: 0;
  display: table;
  border-collapse: separate;
  border-color: #9a9a9a;
}

.emotion-7 {
  text-align: left;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-11 {
  text-align: center;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-19 {
  background-color: #3570f40D;
  text-align: left;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-23 {
  background-color: #3570f40D;
  text-align: center;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-25 {
  fill: #188fff;
  cursor: pointer;
  vertical-align: text-bottom;
}

<div
  class="emotion-0 emotion-1"
  data-testid="service-list"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div>
      <button
        class="emotion-4 denali-button"
      >
        Add Service
      </button>
    </div>
  </div>
  <table
    class="emotion-5 emotion-6"
    id="services-table"
  >
    <thead>
      <tr>
        <th
          class="emotion-7 emotion-8"
        >
          Service
        </th>
        <th
          class="emotion-7 emotion-8"
        >
          Modified Date
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Public Keys
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Tags
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="emotion-17 emotion-18"
        data-testid="service-row"
      >
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          openhouse
        </td>
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          2020-02-08 00:02 UTC
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              key
            </title>
            <path
              d="M861.867 738.133l-283.733-285.867c25.375-36.49 40.54-81.738 40.54-130.527 0-0.612-0.002-1.223-0.007-1.833l0.001 0.094c0-129.603-105.064-234.667-234.667-234.667s-234.667 105.064-234.667 234.667c0 129.603 105.064 234.667 234.667 234.667v0c0.517 0.004 1.128 0.007 1.74 0.007 48.789 0 94.037-15.165 131.286-41.039l-0.759 0.499 128 125.867-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 98.133-98.133 68.267 68.267-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 128-128c8.083-7.434 13.13-18.061 13.13-29.867s-5.047-22.432-13.101-29.84l-0.029-0.026zM234.667 320c0-82.475 66.859-149.333 149.333-149.333s149.333 66.859 149.333 149.333c0 82.475-66.859 149.333-149.333 149.333v0c-82.475 0-149.333-66.859-149.333-149.333v0z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              tag
            </title>
            <path
              d="M492.8 145.067l360.533 360.533v347.733h-347.733l-360.533-360.533 347.733-347.733zM492.8 42.667c-11.712 0.172-22.255 5.037-29.86 12.793l-0.007 0.007-407.467 407.467c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026 416 416h424.533c23.564 0 42.667-19.103 42.667-42.667v0-424.533l-416-416c-7.612-7.763-18.155-12.628-29.835-12.8l-0.032-0z"
            />
            <path
              d="M746.667 661.333c0 47.128-38.205 85.333-85.333 85.333s-85.333-38.205-85.333-85.333c0-47.128 38.205-85.333 85.333-85.333s85.333 38.205 85.333 85.333z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id="delete-service-openhouse"
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              trash
            </title>
            <path
              d="M917.333 187.733c0.007 0.319 0.012 0.694 0.012 1.071 0 12.755-4.867 24.374-12.846 33.1l0.034-0.038c-6.696 7.89-16.62 12.864-27.706 12.864-0.76 0-1.515-0.023-2.264-0.069l0.103 0.005h-256c-23.564 0-42.667-19.103-42.667-42.667v0-42.667h-128v42.667c0 23.564-19.103 42.667-42.667 42.667v0h-253.867c-0.136 0.001-0.298 0.002-0.459 0.002-22.485 0-41.102-16.565-44.311-38.157l-0.030-0.245c-0.007-0.319-0.012-0.694-0.012-1.071 0-12.755 4.867-24.374 12.846-33.1l-0.034 0.038c6.696-7.89 16.62-12.864 27.706-12.864 0.76 0 1.515 0.023 2.264 0.069l-0.103-0.005h213.333v-42.667c0-23.564 19.103-42.667 42.667-42.667v0h213.333c23.564 0 42.667 19.103 42.667 42.667v0 42.667h211.2c0.136-0.001 0.298-0.002 0.459-0.002 22.485 0 41.102 16.565 44.311 38.157l0.030 0.245z"
            />
            <path
              d="M742.4 358.4l-51.2 516.267h-358.4l-51.2-516.267c-2.24-21.656-20.391-38.401-42.453-38.401-0.075 0-0.15 0-0.225 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-23.564 0-42.667 19.103-42.667 42.667 0 1.503 0.078 2.988 0.229 4.45l-0.015-0.183 55.467 554.667c2.24 21.656 20.391 38.401 42.453 38.401 0.075 0 0.15-0 0.225-0.001l-0.012 0h435.2c0.064 0 0.139 0.001 0.214 0.001 22.062 0 40.213-16.744 42.437-38.218l0.015-0.183 55.467-554.667c0.136-1.28 0.214-2.764 0.214-4.267 0-23.564-19.103-42.667-42.667-42.667-0.075 0-0.15 0-0.226 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-22.062 0-40.213 16.744-42.437 38.218l-0.015 0.183z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ServiceList should render serviceList again after confirm delete 1`] = `
.emotion-0 {
  margin: 20px;
}

.emotion-2 {
  padding-bottom: 20px;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  float: right;
}

.emotion-4 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px #3697f2 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  color: #3697f2;
}

.emotion-4:first-of-type {
  margin-left: 0;
}

.emotion-4:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-4:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-4:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-5 {
  width: 100%;
  border-spacing: 0;
  display: table;
  border-collapse: separate;
  border-color: #9a9a9a;
}

.emotion-7 {
  text-align: left;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-11 {
  text-align: center;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

<div
  class="emotion-0 emotion-1"
  data-testid="service-list"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div>
      <button
        class="emotion-4 denali-button"
      >
        Add Service
      </button>
    </div>
  </div>
  <table
    class="emotion-5 emotion-6"
    id="services-table"
  >
    <thead>
      <tr>
        <th
          class="emotion-7 emotion-8"
        >
          Service
        </th>
        <th
          class="emotion-7 emotion-8"
        >
          Modified Date
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Public Keys
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Tags
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`ServiceList should render with services 1`] = `
.emotion-0 {
  margin: 20px;
}

.emotion-2 {
  padding-bottom: 20px;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  float: right;
}

.emotion-4 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px #3697f2 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  color: #3697f2;
}

.emotion-4:first-of-type {
  margin-left: 0;
}

.emotion-4:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-4:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-4:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-5 {
  width: 100%;
  border-spacing: 0;
  display: table;
  border-collapse: separate;
  border-color: #9a9a9a;
}

.emotion-7 {
  text-align: left;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-11 {
  text-align: center;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-19 {
  background-color: #3570f40D;
  text-align: left;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-23 {
  background-color: #3570f40D;
  text-align: center;
  padding: 5px 0 5px 15px;
  vertical-align: middle;
  word-break: break-all;
}

.emotion-25 {
  fill: #188fff;
  cursor: pointer;
  vertical-align: text-bottom;
}

<div
  class="emotion-0 emotion-1"
  data-testid="service-list"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div>
      <button
        class="emotion-4 denali-button"
      >
        Add Service
      </button>
    </div>
  </div>
  <table
    class="emotion-5 emotion-6"
    id="services-table"
  >
    <thead>
      <tr>
        <th
          class="emotion-7 emotion-8"
        >
          Service
        </th>
        <th
          class="emotion-7 emotion-8"
        >
          Modified Date
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Public Keys
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Tags
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="emotion-17 emotion-18"
        data-testid="service-row"
      >
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          openhouse
        </td>
        <td
          class="emotion-19 emotion-20"
          color="#3570f40D"
        >
          2020-02-08 00:02 UTC
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              key
            </title>
            <path
              d="M861.867 738.133l-283.733-285.867c25.375-36.49 40.54-81.738 40.54-130.527 0-0.612-0.002-1.223-0.007-1.833l0.001 0.094c0-129.603-105.064-234.667-234.667-234.667s-234.667 105.064-234.667 234.667c0 129.603 105.064 234.667 234.667 234.667v0c0.517 0.004 1.128 0.007 1.74 0.007 48.789 0 94.037-15.165 131.286-41.039l-0.759 0.499 128 125.867-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 98.133-98.133 68.267 68.267-98.133 98.133c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 128-128c8.083-7.434 13.13-18.061 13.13-29.867s-5.047-22.432-13.101-29.84l-0.029-0.026zM234.667 320c0-82.475 66.859-149.333 149.333-149.333s149.333 66.859 149.333 149.333c0 82.475-66.859 149.333-149.333 149.333v0c-82.475 0-149.333-66.859-149.333-149.333v0z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id=""
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              tag
            </title>
            <path
              d="M492.8 145.067l360.533 360.533v347.733h-347.733l-360.533-360.533 347.733-347.733zM492.8 42.667c-11.712 0.172-22.255 5.037-29.86 12.793l-0.007 0.007-407.467 407.467c-8.083 7.434-13.13 18.061-13.13 29.867s5.047 22.432 13.101 29.84l0.029 0.026 416 416h424.533c23.564 0 42.667-19.103 42.667-42.667v0-424.533l-416-416c-7.612-7.763-18.155-12.628-29.835-12.8l-0.032-0z"
            />
            <path
              d="M746.667 661.333c0 47.128-38.205 85.333-85.333 85.333s-85.333-38.205-85.333-85.333c0-47.128 38.205-85.333 85.333-85.333s85.333 38.205 85.333 85.333z"
            />
          </svg>
        </td>
        <td
          class="emotion-23 emotion-20"
          color="#3570f40D"
        >
          <svg
            class="emotion-25"
            data-testid="icon"
            data-wdio=""
            height="1.25em"
            id="delete-service-openhouse"
            viewBox="0 0 1024 1024"
            width="1.25em"
          >
            <title>
              trash
            </title>
            <path
              d="M917.333 187.733c0.007 0.319 0.012 0.694 0.012 1.071 0 12.755-4.867 24.374-12.846 33.1l0.034-0.038c-6.696 7.89-16.62 12.864-27.706 12.864-0.76 0-1.515-0.023-2.264-0.069l0.103 0.005h-256c-23.564 0-42.667-19.103-42.667-42.667v0-42.667h-128v42.667c0 23.564-19.103 42.667-42.667 42.667v0h-253.867c-0.136 0.001-0.298 0.002-0.459 0.002-22.485 0-41.102-16.565-44.311-38.157l-0.030-0.245c-0.007-0.319-0.012-0.694-0.012-1.071 0-12.755 4.867-24.374 12.846-33.1l-0.034 0.038c6.696-7.89 16.62-12.864 27.706-12.864 0.76 0 1.515 0.023 2.264 0.069l-0.103-0.005h213.333v-42.667c0-23.564 19.103-42.667 42.667-42.667v0h213.333c23.564 0 42.667 19.103 42.667 42.667v0 42.667h211.2c0.136-0.001 0.298-0.002 0.459-0.002 22.485 0 41.102 16.565 44.311 38.157l0.030 0.245z"
            />
            <path
              d="M742.4 358.4l-51.2 516.267h-358.4l-51.2-516.267c-2.24-21.656-20.391-38.401-42.453-38.401-0.075 0-0.15 0-0.225 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-23.564 0-42.667 19.103-42.667 42.667 0 1.503 0.078 2.988 0.229 4.45l-0.015-0.183 55.467 554.667c2.24 21.656 20.391 38.401 42.453 38.401 0.075 0 0.15-0 0.225-0.001l-0.012 0h435.2c0.064 0 0.139 0.001 0.214 0.001 22.062 0 40.213-16.744 42.437-38.218l0.015-0.183 55.467-554.667c0.136-1.28 0.214-2.764 0.214-4.267 0-23.564-19.103-42.667-42.667-42.667-0.075 0-0.15 0-0.226 0.001l0.012-0c-0.064-0-0.139-0.001-0.214-0.001-22.062 0-40.213 16.744-42.437 38.218l-0.015 0.183z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ServiceList should render without services 1`] = `
.emotion-0 {
  margin: 20px;
}

.emotion-2 {
  padding-bottom: 20px;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  float: right;
}

.emotion-4 {
  border: none;
  border-radius: 2px;
  box-shadow: 0 0 0 1px #3697f2 inset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  font-family: Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 1;
  margin: 5px;
  outline: 0;
  padding: 10px 24px;
  text-align: center;
  text-shadow: none;
  text-transform: none;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
  vertical-align: baseline;
  white-space: nowrap;
  background: transparent;
  color: #3697f2;
}

.emotion-4:first-of-type {
  margin-left: 0;
}

.emotion-4:disabled {
  background: rgba(48,48,48,0.1);
  color: rgba(48,48,48,0.2);
  cursor: not-allowed;
}

.emotion-4:disabled {
  box-shadow: 0 0 0 1px rgba(48,48,48,0.1) inset;
}

.emotion-4:hover:not(:disabled) {
  background: #d7e2fd;
}

.emotion-5 {
  width: 100%;
  border-spacing: 0;
  display: table;
  border-collapse: separate;
  border-color: #9a9a9a;
}

.emotion-7 {
  text-align: left;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

.emotion-11 {
  text-align: center;
  border-bottom: 2px solid #d5d5d5;
  color: #9a9a9a;
  font-weight: 600;
  padding-bottom: 5px;
  vertical-align: top;
  text-transform: uppercase;
  padding: 5px 0 5px 15px;
  word-break: break-all;
}

<div
  class="emotion-0 emotion-1"
  data-testid="service-list"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div>
      <button
        class="emotion-4 denali-button"
      >
        Add Service
      </button>
    </div>
  </div>
  <table
    class="emotion-5 emotion-6"
    id="services-table"
  >
    <thead>
      <tr>
        <th
          class="emotion-7 emotion-8"
        >
          Service
        </th>
        <th
          class="emotion-7 emotion-8"
        >
          Modified Date
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Public Keys
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Tags
        </th>
        <th
          class="emotion-11 emotion-8"
        >
          Delete
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
